--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/moussaka.html">Moussaka</a>
+    <a href="recipes/shepherds_pie.html">Shepherds Pie</a>
+    <a href="recipes/pancakes.html">Easy Pancakes</a>
 </body>
 </html>
